[package]
name = "nazar"
version = "1.0.2"
authors = ["Younis Shah <younisashah@gmail.com>"]
description = "A Tile38 client in rust!"
homepage = "https://github.com/younisshah/nazar"
documentation = "https://github.com/younisshah/nazar"
license = "MIT"
readme = "README.md"

[dependencies]
redis = "0.5.3"
ws = "0.7.3"